--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "langchain": "^0.0.74",
     "next": "13.1.6",
     "openai": "^3.1.0",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
