--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/material": "^5.11.10",
     "@next/font": "13.1.6",
     "@supabase/supabase-js": "^2.21.0",
+    "@types/cheerio": "^0.22.31",
+    "@types/pdf-parse": "^1.1.1",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "eslint": "8.34.0",
@@ -29,6 +31,7 @@
     "next": "13.1.6",
     "openai": "^3.1.0",
     "pdf-parse": "^1.1.1",
+    "playwright": "^1.33.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
@@ -37,6 +40,7 @@
     "ws": "^8.12.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.33.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
