Initial setup with Replicate. Existing models can't follow instructions well enough, need something closer to GPT3.5.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-markdown": "^8.0.5",
     "react-textarea-autosize": "^8.4.1",
     "remark-gfm": "^3.0.1",
+    "replicate": "^0.12.1",
     "ws": "^8.12.1"
   },
   "devDependencies": {
